--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <li class="list-group-item list-group-item-action">
                                 <div class='d-flex justify-content-start align-items-center'>
                                     <div class='px-3'>
-                                        <img class='svg' src='https://www.brandeps.com/logo-download/S/Socket-io-01.png'>
+                                        <img class='svg' src='img/logo_socket.png'>
                                         </img>
                                     </div>
                                     <div class='px-2'>
@@ -512,9 +512,9 @@
                             Also find me on :
                         </p>
                         <div class='col-sm-12 d-flex justify-content-center'>
-                            <a href="https://github.com/mkellydevv" class="btn btn-secondary mx-1" role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GitHub"><i class="fab fa-github"></i></a>
-                            <a href="https://codepen.io/mkellydevv/" class="btn btn-secondary mx-1" role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="CodePen"><i class="fab fa-codepen"></i></a>
-                            <a href="https://www.linkedin.com/in/mkellydevv" class="btn btn-secondary mx-1" role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://github.com/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="https://codepen.io/mkellydevv/" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="CodePen"><i class="fab fa-codepen"></i></a>
+                            <a href="https://www.linkedin.com/in/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
