address bar fix

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <li class="list-group-item list-group-item-action">
                                 <div class='d-flex justify-content-start align-items-center'>
                                     <div class='px-3'>
-                                        <img class='svg' src='http://konpa.github.io/devicon/devicon.git/icons/react/react-original.svg'>
+                                        <img class='svg' src='https://konpa.github.io/devicon/devicon.git/icons/react/react-original.svg'>
                                         </img>
                                     </div>
                                     <div class='px-2'>   
@@ -234,7 +234,7 @@
                             <li class="list-group-item list-group-item-action">
                                 <div class='d-flex justify-content-start align-items-center'>
                                     <div class='px-3'>
-                                        <img class='svg' src='img/logo_redux.png'>
+                                        <img class='svg' src='img/logo/redux.png'>
                                         </img>
                                     </div>
                                     <div class='px-2'>   
@@ -288,7 +288,7 @@
                             <li class="list-group-item list-group-item-action">
                                 <div class='d-flex justify-content-start align-items-center'>
                                     <div class='px-3'>
-                                        <img class='svg' src='img/logo_socket.png'>
+                                        <img class='svg' src='img/logo/socket.png'>
                                         </img>
                                     </div>
                                     <div class='px-2'>
@@ -353,7 +353,7 @@
                             <li class="list-group-item list-group-item-action">
                                 <div class='d-flex justify-content-start align-items-center'>
                                     <div class='px-3'>
-                                        <img class='svg' src='http://konpa.github.io/devicon/devicon.git/icons/visualstudio/visualstudio-plain.svg'>
+                                        <img class='svg' src='https://upload.wikimedia.org/wikipedia/commons/e/e4/Visual_Studio_2013_Logo.svg'>
                                         </img>
                                     </div>
                                     <div class='px-2'>
