--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                                 <div id='link_container' class='col-sm-12 d-flex justify-content-left'>
                                     <a href="https://github.com/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GitHub"><i class="fab fa-github"></i></a>
                                     <a href="https://codepen.io/mkellydevv/" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="CodePen"><i class="fab fa-codepen"></i></a>
+                                    <a href="https://www.hackerrank.com/m_kelly_devv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="HackerRank"><i class="fab fa-hackerrank"></i></a>
                                     <a href="https://www.linkedin.com/in/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                                     <a href="Resume - Michael Kelly.pdf" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Resume"><i class="far fa-file"></i></a>
                                     <a id='btn_copy_email' class="btn btn-secondary mx-1" role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Copy E-mail"><i class="far fa-envelope"></i></a>
@@ -530,6 +531,7 @@
                         <div class='col-sm-12 d-flex justify-content-center'>
                             <a href="https://github.com/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GitHub"><i class="fab fa-github"></i></a>
                             <a href="https://codepen.io/mkellydevv/" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="CodePen"><i class="fab fa-codepen"></i></a>
+                            <a href="https://www.hackerrank.com/m_kelly_devv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="HackerRank"><i class="fab fa-hackerrank"></i></a>
                             <a href="https://www.linkedin.com/in/mkellydevv" class="btn btn-secondary mx-1" target='_blank' role="button" data-container="body" data-toggle="popover" data-placement="bottom" data-content="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
