Implemented template from html5up.net.  Inserted my projects into the index.html, Edited css where appropriate.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,281 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Multiverse by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Michael Kelly</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<nav>
+							<ul>
+								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+						<article class="thumb">
+							<a href="images/fulls/01.png" class="image">
+								<img src="images/fulls/01.png" alt="" />
+								<h2>Fox Form</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Fox Form</h2>
+								<p>Navigate your way through a perilous forest while collecting power-ups along the way.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/mkellydevv/online_platformer_demo">
+									<button class="primary">Github</button>
+								</a>
+								<a href="https://ctf-nfe-demo.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+							</article>
+						<!-- <p>React, Redux, Flask, SQLAchemy, PostgreSQL, Selenium, AWS, Mapbox API</p> -->
+
+						<article class="thumb">
+							<a href="images/fulls/05.png" class="image">
+								<img src="images/fulls/05.png" alt="" />
+								<h2>Jaunts</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Jaunts</h2>
+								<p>Plan your next amazing hiking adventure.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/mkellydevv/jaunts">
+									<button class="primary">Github</button>
+								</a>
+								<a href="https://jaunts-99.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/02.png" class="image">
+								<img src="images/fulls/02.png" alt="" />
+								<h2>Tiledit</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Tiledit</h2>
+								<p>Develop your next indie game using smart tiling.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://tile-editor.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/06.png" class="image">
+								<img src="images/fulls/06.png" alt="" />
+								<h2>Scratch.io</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Scratch.io</h2>
+								<p>Form indie teams for participating in game jams.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/JoshuaJDevine/aa-python-group-project">
+									<button class="primary">Github</button>
+								</a>
+								<a href="https://whisk-project.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/07.png" class="image">
+								<img src="images/fulls/07.png" alt="" />
+								<h2>Sketch It</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Sketch It</h2>
+								<p>Pictures are worth a thousand words. Communicate at lightning speeds with this social drawing app.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/mkellydevv/Sketch-It">
+									<button class="primary">Github</button>
+								</a>
+								<a href="https://sketch-it-99.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/03.png" class="image">
+								<img src="images/fulls/03.png" alt="" />
+								<h2>Vector Graphics Animator</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Vector Graphics Animator</h2>
+								<p>Harken back to the era of Flash by animating your next cartoon with vector graphics.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/mkellydevv/vector_graphics_animator">
+									<button class="primary">Github</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/08.png" class="image">
+								<img src="images/fulls/08.png" alt="" />
+								<h2>Remember the Whey</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Remember the Whey</h2>
+								<p>Keep on top of your workouts using this workout oriented task tracker.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/aMoss5150/Remember-The-Whey">
+									<button class="primary">Github</button>
+								</a>
+								<a href="https://remember-the-whey.herokuapp.com/">
+									<button>Live</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/04.png" class="image">
+								<img src="images/fulls/04.png" alt="" />
+								<h2>Subdivision Surface Modeler</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Subdivision Surface Modeler</h2>
+								<p>Smooth out that low poly mesh you've had laying around.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://github.com/mkellydevv/subdivision_surface_modeler">
+									<button class="primary">Github</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/09.png" class="image">
+								<img src="images/fulls/09.png" alt="" />
+								<h2>Parallax Stack</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Parallax Stack</h2>
+								<p>Utilize parallax transitions in your next website.</p>
+							</div>
+							<div class="panel__buttons">
+								<a href="https://codepen.io/mkellydevv/full/NJPLrY">
+									<button class="primary">Codepen</button>
+								</a>
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/10.png" class="image">
+								<img src="images/fulls/10.png" alt="" />
+								<h2>Bring Your Own Beats</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Bring Your Own Beats</h2>
+								<p>Play auto-generated levels based on your music in this rhythm game.</p>
+							</div>
+							<div class="panel__buttons">
+
+							</div>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/11.jpg" class="image">
+								<img src="images/thumbs/11.jpg" alt="" />
+								<h2>Unity Platform Fighter</h2>
+							</a>
+							<div class="panel__info">
+								<h2>Unity Platform Fighter</h2>
+								<p>In development.</p>
+							</div>
+							<div class="panel__buttons">
+
+							</div>
+						</article>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer" class="panel">
+						<div class="inner split">
+							<div>
+								<section>
+									<h2>Magna feugiat sed adipiscing</h2>
+									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+								</section>
+								<section>
+									<h2>Follow me on ...</h2>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</section>
+								<p class="copyright">
+									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+								</p>
+							</div>
+							<div>
+								<section>
+									<h2>Get in touch</h2>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<input type="text" name="name" id="name" placeholder="Name" />
+											</div>
+											<div class="field half">
+												<input type="text" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="field">
+												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="primary" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</section>
+							</div>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
