Added links to social medias

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><a href="#footer"><strong>Michael</strong> Kelly</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
@@ -230,16 +230,23 @@
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/mkellydevv" class="icon brands fa-github">
+											<span class="label">GitHub</span>
+										</a></li>
+
+										<li><a href="https://www.linkedin.com/in/mkellydevv" class="icon brands fa-linkedin-in">
+											<span class="label">LinkedIn</span>
+										</a></li>
+
+										<li><a href="https://codepen.io/mkellydevv/" class="icon brands fa-codepen">
+											<span class="label">Codepen</span>
+										</a></li>
+
+
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; Multiverse. Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
 							<div>
