Added a skills section to my about me section

--- a/index.html
+++ b/index.html
@@ -224,8 +224,44 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>About me</h2>
+									<p>
+
+									</p>
+								</section>
+								<section>
+									<h2>Technologies</h2>
+									<div class="skills">
+										<div>Languages</div>
+										<div>Front-End</div>
+										<div>Back-End</div>
+										<div>Other</div>
+
+										<div>Javascript</div>
+										<div>HTML5 | CSS3</div>
+										<div>PostgreSQL</div>
+										<div>Git</div>
+
+										<div>Python</div>
+										<div>React</div>
+										<div>Flask</div>
+										<div></div>
+
+										<div>C++</div>
+										<div>Redux</div>
+										<div></div>
+										<div>Heroku</div>
+
+										<div></div>
+										<div></div>
+										<div></div>
+										<div></div>
+
+										<div></div>
+										<div></div>
+										<div></div>
+										<div></div>
+									</table>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
