Added an about me description to the about me section

--- a/index.html
+++ b/index.html
@@ -225,43 +225,89 @@
 							<div>
 								<section>
 									<h2>About me</h2>
-									<p>
+<p>
+	I am a Software Engineer that specializes in full-stack web development and game programming. I received my
+	education in computer science at George Mason University, App Academy, and through self-study.
+	<br><br>
+	What defines me most as a progammer is my focus on creating modular and extensible code.
+	Beyond that, I enjoy finding the most efficient solutions to the problems I work on, and will not
+	stop working a Leetcode challenge until it's in the top ~1% of accepted solutions. When I work on a new project,
+	I always try to utilize a new technology or framework to keep myself improving.
+	<br><br>
+	In my spare time, I enjoy creating small indie games wherein I implement some novel idea. My other hobbies
+	include typical nerd affair like playing games, hiking, and fitness.
+	<br><br>
+	If you would like to know more about any of my projects, please reach out to me through e-mail or on LinkedIn.
 
-									</p>
+	<!-- ----------------------------------------------------
+
+
+	I am into the typical nerd hobbies such as hiking, weight lifting, and running. And also gaming and anime.
+
+	I am also an indie game dev and enjoy implementing novel ideas.
+
+	My dream indie dev game project is to create a procedural open world rpg that feels alive and not procedurally generated.
+
+	I learned the fundamentals of computer programming while attending George Mason University, and learned
+	Full Stack software engineering at app academy, but the bulk of my skill was developed in between.
+
+	I enjoy problem solving, especially when it comes to finding the most efficient
+	solutions to algorithmic problems.
+
+	I am driven and passionate about creating clean, efficient code.
+
+	As a Software Engineer, I focus on modularity and extensibility.
+
+	If you would like to know more about any of my projects,
+	please reach out to me through email or on Linkedin. -->
+
+</p>
 								</section>
 								<section>
 									<h2>Technologies</h2>
-									<div class="skills">
-										<div>Languages</div>
-										<div>Front-End</div>
-										<div>Back-End</div>
-										<div>Other</div>
+									<p>
+										<div class="skills">
+											<div class="skill_bold">Languages</div>
+											<div class="skill_bold">Front-End</div>
+											<div class="skill_bold">Back-End</div>
+											<div class="skill_bold">Other</div>
 
-										<div>Javascript</div>
-										<div>HTML5 | CSS3</div>
-										<div>PostgreSQL</div>
-										<div>Git</div>
+											<div>Javascript</div>
+											<div>HTML | CSS</div>
+											<div>PostgreSQL</div>
+											<div>Git</div>
 
-										<div>Python</div>
-										<div>React</div>
-										<div>Flask</div>
-										<div></div>
+											<div>Python</div>
+											<div>React</div>
+											<div>Flask</div>
+											<div>Heroku</div>
 
-										<div>C++</div>
-										<div>Redux</div>
-										<div></div>
-										<div>Heroku</div>
+											<div>C++</div>
+											<div>Redux</div>
+											<div>SQLAlchemy</div>
+											<div>NodeJS</div>
 
-										<div></div>
-										<div></div>
-										<div></div>
-										<div></div>
+											<div class="skill_bold">Test Framework</div>
+											<div>ChakraUI</div>
+											<div>Express</div>
+											<div>Docker</div>
 
-										<div></div>
-										<div></div>
-										<div></div>
-										<div></div>
-									</table>
+											<div>Mocha</div>
+											<div>Formik</div>
+											<div>Sequelize</div>
+											<div>Selenium</div>
+
+											<div>Chai</div>
+											<div>Bootstrap</div>
+											<div>AWS S3</div>
+											<div>OpenGL</div>
+
+											<div></div>
+											<div>jQuery</div>
+											<div>Socket.io</div>
+											<div>Godot</div>
+										</div>
+									</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
