Added resume link and email link. Polished up various parts.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 						<h1><a href="#footer"><strong>Michael</strong> Kelly</a></h1>
 						<nav>
 							<ul>
+								<li><a href="Resume - Michael Kelly.pdf">Resume</a></li>
+								<li class="copy"><a class="copy-link" href="#">
+									E-mail
+								</a></li>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
 							</ul>
 						</nav>
@@ -225,46 +229,23 @@
 							<div>
 								<section>
 									<h2>About me</h2>
-<p>
-	I am a Software Engineer that specializes in full-stack web development and game programming. I received my
-	education in computer science at George Mason University, App Academy, and through self-study.
-	<br><br>
-	What defines me most as a progammer is my focus on creating modular and extensible code.
-	Beyond that, I enjoy finding the most efficient solutions to the problems I work on, and will not
-	stop working a Leetcode challenge until it's in the top ~1% of accepted solutions. When I work on a new project,
-	I always try to utilize a new technology or framework to keep myself improving.
-	<br><br>
-	In my spare time, I enjoy creating small indie games wherein I implement some novel idea. My other hobbies
-	include typical nerd affair like playing games, hiking, and fitness.
-	<br><br>
-	If you would like to know more about any of my projects, please reach out to me through e-mail or on LinkedIn.
-
-	<!-- ----------------------------------------------------
-
-
-	I am into the typical nerd hobbies such as hiking, weight lifting, and running. And also gaming and anime.
-
-	I am also an indie game dev and enjoy implementing novel ideas.
-
-	My dream indie dev game project is to create a procedural open world rpg that feels alive and not procedurally generated.
-
-	I learned the fundamentals of computer programming while attending George Mason University, and learned
-	Full Stack software engineering at app academy, but the bulk of my skill was developed in between.
-
-	I enjoy problem solving, especially when it comes to finding the most efficient
-	solutions to algorithmic problems.
-
-	I am driven and passionate about creating clean, efficient code.
-
-	As a Software Engineer, I focus on modularity and extensibility.
-
-	If you would like to know more about any of my projects,
-	please reach out to me through email or on Linkedin. -->
-
-</p>
+									<p>
+										I am a Software Engineer that specializes in full-stack web development and game programming. I received my
+										education in computer science at George Mason University, App Academy, and through self-study.
+										<br><br>
+										What defines me most as a progammer is my focus on creating modular and extensible code.
+										Beyond that, I enjoy finding the most efficient solutions to the problems I work on, and will not
+										stop working a Leetcode challenge until it's in the top ~1% of accepted solutions. When I work on a new project,
+										I always try to utilize a new technology or framework to keep myself improving.
+										<br><br>
+										In my spare time, I enjoy creating small indie games wherein I implement some novel idea. My other hobbies
+										include typical nerd affair like playing games, hiking, and fitness.
+										<br><br>
+										If you would like to know more about any of my projects, please reach out to me through e-mail or on LinkedIn.
+									</p>
 								</section>
 								<section>
-									<h2>Technologies</h2>
+									<h2>Skills & Technologies</h2>
 									<p>
 										<div class="skills">
 											<div class="skill_bold">Languages</div>
@@ -287,7 +268,7 @@
 											<div>SQLAlchemy</div>
 											<div>NodeJS</div>
 
-											<div class="skill_bold">Test Framework</div>
+											<div class="skill_bold">Test Frameworks</div>
 											<div>ChakraUI</div>
 											<div>Express</div>
 											<div>Docker</div>
@@ -309,6 +290,13 @@
 										</div>
 									</p>
 								</section>
+
+								<p class="copyright">
+									&copy; Multiverse. Design: <a href="http://html5up.net">HTML5 UP</a>.
+								</p>
+							</div>
+							<div>
+
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
@@ -323,34 +311,11 @@
 										<li><a href="https://codepen.io/mkellydevv/" class="icon brands fa-codepen">
 											<span class="label">Codepen</span>
 										</a></li>
-
-
 									</ul>
 								</section>
-								<p class="copyright">
-									&copy; Multiverse. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
-							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
+
+								<section class="avatar__container">
+									<img class="avatar" src="images/me.jpg" alt="Avatar" />
 								</section>
 							</div>
 						</div>
