Updated resume and changed fox forest link and name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1><a href="#footer"><strong>Michael</strong> Kelly</a></h1>
 						<nav>
 							<ul>
-								<li><a href="Resume - Michael Kelly.pdf">Resume</a></li>
+								<li><a href="Michael_Kelly_Resume.pdf">Resume</a></li>
 								<li class="copy"><a class="copy-link" href="#">
 									E-mail
 								</a></li>
@@ -43,7 +43,7 @@
 								<p>Navigate your way through a perilous forest while collecting power-ups along the way.</p>
 							</div>
 							<div class="panel__buttons">
-								<a href="https://github.com/mkellydevv/online_platformer_demo">
+								<a href="https://github.com/mkellydevv/fox_forest">
 									<button class="primary">Github</button>
 								</a>
 								<a href="https://ctf-nfe-demo.herokuapp.com/">
