--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 						<article class="thumb">
 							<a href="images/fulls/01.png" class="image">
 								<img src="images/fulls/01.png" alt="" />
-								<h2>Fox Form</h2>
+								<h2>Fox Forest</h2>
 							</a>
 							<div class="panel__info">
-								<h2>Fox Form</h2>
+								<h2>Fox Forest</h2>
 								<p>Navigate your way through a perilous forest while collecting power-ups along the way.</p>
 							</div>
 							<div class="panel__buttons">
