Added img to unity platform fighter.  Added angellist link.

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 						</article>
 
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image">
-								<img src="images/thumbs/11.jpg" alt="" />
+							<a href="images/fulls/11.png" class="image">
+								<img src="images/fulls/11.png" alt="" />
 								<h2>Unity Platform Fighter</h2>
 							</a>
 							<div class="panel__info">
@@ -306,6 +306,10 @@
 
 										<li><a href="https://www.linkedin.com/in/mkellydevv" class="icon brands fa-linkedin-in">
 											<span class="label">LinkedIn</span>
+										</a></li>
+
+										<li><a href="https://angel.co/u/michael-kelly-73" class="icon brands fa-angellist">
+											<span class="label">AngelList</span>
 										</a></li>
 
 										<li><a href="https://codepen.io/mkellydevv/" class="icon brands fa-codepen">
