Changed caption to 100% opacity at all times. Made it so resume will try to open in a new tab.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 						<h1><a href="#footer"><strong>Michael</strong> Kelly</a></h1>
 						<nav>
 							<ul>
-								<li><a href="Michael_Kelly_Resume.pdf">Resume</a></li>
+								<li>
+									<a
+										target="_blank"
+										href="Michael_Kelly_Resume.pdf"
+										rel="noreferrer noopener"
+									>
+										Resume
+									</a>
+								</li>
 								<li class="copy"><a class="copy-link" href="#">
 									E-mail
 								</a></li>
@@ -233,9 +241,9 @@
 										I am a Software Engineer that specializes in full-stack web development and game programming. I received my
 										education in computer science at George Mason University, App Academy, and through self-study.
 										<br><br>
-										What defines me most as a progammer is my focus on creating modular and extensible code.
+										What defines me most as a programmer is my focus on creating modular and extensible code.
 										Beyond that, I enjoy finding the most efficient solutions to the problems I work on, and will not
-										stop working a Leetcode challenge until it's in the top ~1% of accepted solutions. When I work on a new project,
+										stop working a LeetCode challenge until it's in the top ~1% of accepted solutions. When I work on a new project,
 										I always try to utilize a new technology or framework to keep myself improving.
 										<br><br>
 										In my spare time, I enjoy creating small indie games wherein I implement some novel idea. My other hobbies
