Updated resume to include more ATS keywords and MongoDB. Added More skills to about me section.

--- a/index.html
+++ b/index.html
@@ -268,25 +268,30 @@
 
 											<div>Python</div>
 											<div>React</div>
-											<div>Flask</div>
+											<div>MongoDB</div>
 											<div>Heroku</div>
 
 											<div>C++</div>
 											<div>Redux</div>
-											<div>SQLAlchemy</div>
+											<div>Flask</div>
 											<div>NodeJS</div>
 
 											<div class="skill_bold">Test Frameworks</div>
 											<div>ChakraUI</div>
-											<div>Express</div>
+											<div>SQLAlchemy</div>
 											<div>Docker</div>
 
 											<div>Mocha</div>
 											<div>Formik</div>
-											<div>Sequelize</div>
+											<div>Express</div>
 											<div>Selenium</div>
 
 											<div>Chai</div>
+											<div>Pug</div>
+											<div>Sequelize</div>
+											<div>Weka</div>
+
+											<div></div>
 											<div>Bootstrap</div>
 											<div>AWS S3</div>
 											<div>OpenGL</div>
