Added sass to skills and latest resume.

--- a/index.html
+++ b/index.html
@@ -294,11 +294,16 @@
 											<div>Mocha</div>
 											<div>Bootstrap</div>
 											<div>AWS S3</div>
-											<div>OpenGL</div>
+											<div>WebGL</div>
 
 											<div>Chai</div>
 											<div>jQuery</div>
 											<div>Socket.io</div>
+											<div>OpenGL</div>
+
+											<div></div>
+											<div>Sass</div>
+											<div>AJAX</div>
 											<div>Godot</div>
 										</div>
 									</p>
