Updated resume, added sass/scss and next.js to skills

--- a/index.html
+++ b/index.html
@@ -267,43 +267,43 @@
 											<div>Git</div>
 
 											<div>Python</div>
-											<div>React</div>
+											<div>SASS | SCSS</div>
 											<div>MongoDB</div>
 											<div>Heroku</div>
 
 											<div>C++ | C</div>
-											<div>Redux</div>
+											<div>React</div>
 											<div>Flask</div>
 											<div>NodeJS</div>
 
 											<div>C#</div>
-											<div>ChakraUI</div>
+											<div>Redux</div>
 											<div>SQLAlchemy</div>
 											<div>Docker</div>
 
 											<div>Java</div>
-											<div>Formik</div>
+											<div>ChakraUI</div>
 											<div>Express</div>
 											<div>Selenium</div>
 
 											<div class="skill_bold">Test Frameworks</div>
-											<div>Pug</div>
+											<div>Formik</div>
 											<div>Sequelize</div>
 											<div>Weka</div>
 
 											<div>Mocha</div>
-											<div>Bootstrap</div>
+											<div>Pug</div>
 											<div>AWS S3</div>
 											<div>WebGL</div>
 
 											<div>Chai</div>
-											<div>jQuery</div>
+											<div>Bootstrap</div>
 											<div>Socket.io</div>
 											<div>OpenGL</div>
 
 											<div></div>
-											<div>Sass</div>
-											<div>AJAX</div>
+											<div>jQuery</div>
+											<div>Next.js</div>
 											<div>Godot</div>
 										</div>
 									</p>
