Updated skills and resume

--- a/index.html
+++ b/index.html
@@ -266,45 +266,51 @@
 											<div>PostgreSQL</div>
 											<div>Git</div>
 
-											<div>Python</div>
+											<div>Typescript</div>
 											<div>SASS | SCSS</div>
 											<div>MongoDB</div>
-											<div>Heroku</div>
+											<div>Linux | Unix</div>
 
-											<div>C++ | C</div>
+											<div>Python</div>
 											<div>React</div>
-											<div>Flask</div>
+											<div>Next.js</div>
 											<div>NodeJS</div>
 
-											<div>C#</div>
+											<div>C++ | C</div>
 											<div>Redux</div>
-											<div>SQLAlchemy</div>
+											<div>Apollo</div>
 											<div>Docker</div>
 
-											<div>Java</div>
-											<div>ChakraUI</div>
+											<div>C#</div>
+											<div>GraphQL</div>
 											<div>Express</div>
 											<div>Selenium</div>
 
-											<div class="skill_bold">Test Frameworks</div>
-											<div>Formik</div>
-											<div>Sequelize</div>
+
+											<div>Java</div>
+											<div>Urql</div>
+											<div>Flask</div>
 											<div>Weka</div>
 
-											<div>Mocha</div>
-											<div>Pug</div>
-											<div>AWS S3</div>
+											<div class="skill_bold">Test Frameworks</div>
+											<div>ChakraUI</div>
+											<div>Sequelize</div>
 											<div>WebGL</div>
 
-											<div>Chai</div>
-											<div>Bootstrap</div>
-											<div>Socket.io</div>
+											<div>Mocha</div>
+											<div>Formik</div>
+											<div>SQLAlchemy</div>
 											<div>OpenGL</div>
 
-											<div></div>
+											<div>Chai</div>
 											<div>jQuery</div>
-											<div>Next.js</div>
+											<div>AWS S3</div>
 											<div>Godot</div>
+
+											<div>JUnit</div>
+											<div>Bootstrap</div>
+											<div>Socket.io</div>
+											<div>Heroku</div>
 										</div>
 									</p>
 								</section>
